--- a/app/src/main/res/layout/create_instance_activity.xml
+++ b/app/src/main/res/layout/create_instance_activity.xml
@@ -10,13 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/border"
         android:fontFamily="cursive"
         android:hint="@string/title"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:textColor="@color/gray"
+        android:textColorHint="@color/gray" />
+    />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -35,7 +38,8 @@
             android:hint="@string/description"
             android:minHeight="48dp"
             android:padding="10dp"
-            android:textColorHint="#757575" />
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray" />
     </ScrollView>
 
     <Button
@@ -48,8 +52,10 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:text="@string/save"
         android:fontFamily="cursive"
-        app:cornerRadius="10dp" />
+        android:text="@string/save"
+        android:textColor="@color/gray"
+        app:cornerRadius="10dp"
+        android:background="@color/yellow_600"/>
 
 </RelativeLayout>
