--- a/app/src/main/res/layout/notes_row.xml
+++ b/app/src/main/res/layout/notes_row.xml
@@ -8,6 +8,7 @@
     android:layout_marginTop="10dp">
 
     <TextView
+        android:textColor="@color/gray"
         android:id="@+id/NoteMeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,6 +23,7 @@
         android:textStyle="bold" />
 
     <TextView
+        android:textColor="@color/gray"
         android:id="@+id/NoteMeDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
