--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#B71C1C</color>
+    <color name="red">#F44336</color>
     <color name="yellow_900">#F57F17</color>
     <color name="yellow_800">#F9A825</color>
     <color name="yellow_500">#FFEB3B</color>
